// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`EC - Social Media Follow Horizontal renders correctly 1`] = `
"<div class=\\"ecl-social-media-follow\\">
  <p class=\\"ecl-social-media-follow__description\\">
    Follow the latest progress and learn more about getting involved.
  </p>
  <ul class=\\"ecl-social-media-follow__list\\">
    <li class=\\"ecl-social-media-follow__item\\">
      <a
        href=\\"/example\\"
        class=\\"ecl-social-media-follow__link ecl-link ecl-link--standalone ecl-link--icon ecl-link--icon-before\\"
        ><svg
          focusable=\\"false\\"
          aria-hidden=\\"true\\"
          class=\\"ecl-link__icon ecl-icon ecl-icon--xl ecl-social-media-follow__icon\\"
        >
          <use xlink:href=\\"example#twitter\\" /></svg
        ><svg
          focusable=\\"false\\"
          aria-hidden=\\"true\\"
          class=\\"ecl-link__icon ecl-icon ecl-icon--xl ecl-social-media-follow__icon-hover\\"
        >
          <use xlink:href=\\"example#twitter_hover\\" /></svg
        ><span class=\\"ecl-link__label\\">Twitter</span></a
      >
    </li>
    <li class=\\"ecl-social-media-follow__item\\">
      <a
        href=\\"/example\\"
        class=\\"ecl-social-media-follow__link ecl-link ecl-link--standalone ecl-link--icon ecl-link--icon-before\\"
        ><svg
          focusable=\\"false\\"
          aria-hidden=\\"true\\"
          class=\\"ecl-link__icon ecl-icon ecl-icon--xl ecl-social-media-follow__icon\\"
        >
          <use xlink:href=\\"example#facebook\\" /></svg
        ><svg
          focusable=\\"false\\"
          aria-hidden=\\"true\\"
          class=\\"ecl-link__icon ecl-icon ecl-icon--xl ecl-social-media-follow__icon-hover\\"
        >
          <use xlink:href=\\"example#facebook_hover\\" /></svg
        ><span class=\\"ecl-link__label\\">Facebook</span></a
      >
    </li>
    <li class=\\"ecl-social-media-follow__item\\">
      <a
        href=\\"/example\\"
        class=\\"ecl-social-media-follow__link ecl-link ecl-link--standalone ecl-link--icon ecl-link--icon-before\\"
        ><svg
          focusable=\\"false\\"
          aria-hidden=\\"true\\"
          class=\\"ecl-link__icon ecl-icon ecl-icon--xl ecl-social-media-follow__icon\\"
        >
          <use xlink:href=\\"example#gplus\\" /></svg
        ><svg
          focusable=\\"false\\"
          aria-hidden=\\"true\\"
          class=\\"ecl-link__icon ecl-icon ecl-icon--xl ecl-social-media-follow__icon-hover\\"
        >
          <use xlink:href=\\"example#gplus_hover\\" /></svg
        ><span class=\\"ecl-link__label\\">Google+</span></a
      >
    </li>
    <li class=\\"ecl-social-media-follow__item\\">
      <a
        href=\\"/example\\"
        class=\\"ecl-social-media-follow__link ecl-link ecl-link--standalone ecl-link--icon ecl-link--icon-before\\"
        ><svg
          focusable=\\"false\\"
          aria-hidden=\\"true\\"
          class=\\"ecl-link__icon ecl-icon ecl-icon--xl ecl-social-media-follow__icon\\"
        >
          <use xlink:href=\\"example#linkedin\\" /></svg
        ><svg
          focusable=\\"false\\"
          aria-hidden=\\"true\\"
          class=\\"ecl-link__icon ecl-icon ecl-icon--xl ecl-social-media-follow__icon-hover\\"
        >
          <use xlink:href=\\"example#linkedin_hover\\" /></svg
        ><span class=\\"ecl-link__label\\">Linkedin</span></a
      >
    </li>
    <li class=\\"ecl-social-media-follow__item\\">
      <a
        href=\\"/example\\"
        class=\\"ecl-social-media-follow__link ecl-link ecl-link--standalone ecl-link--icon ecl-link--icon-before\\"
        ><span class=\\"ecl-link__label\\">Other social networks</span></a
      >
    </li>
  </ul>
</div>
"
`;

exports[`EC - Social Media Follow Vertical renders correctly 1`] = `
"<div class=\\"ecl-social-media-follow ecl-social-media-follow--vertical\\">
  <p class=\\"ecl-social-media-follow__description\\">
    Follow the latest progress and learn more about getting involved.
  </p>
  <ul class=\\"ecl-social-media-follow__list\\">
    <li class=\\"ecl-social-media-follow__item\\">
      <a
        href=\\"/example\\"
        class=\\"ecl-social-media-follow__link ecl-link ecl-link--standalone ecl-link--icon ecl-link--icon-before\\"
        ><svg
          focusable=\\"false\\"
          aria-hidden=\\"true\\"
          class=\\"ecl-link__icon ecl-icon ecl-icon--xl ecl-social-media-follow__icon\\"
        >
          <use xlink:href=\\"example#twitter\\" /></svg
        ><svg
          focusable=\\"false\\"
          aria-hidden=\\"true\\"
          class=\\"ecl-link__icon ecl-icon ecl-icon--xl ecl-social-media-follow__icon-hover\\"
        >
          <use xlink:href=\\"example#twitter_hover\\" /></svg
        ><span class=\\"ecl-link__label\\">Twitter</span></a
      >
    </li>
    <li class=\\"ecl-social-media-follow__item\\">
      <a
        href=\\"/example\\"
        class=\\"ecl-social-media-follow__link ecl-link ecl-link--standalone ecl-link--icon ecl-link--icon-before\\"
        ><svg
          focusable=\\"false\\"
          aria-hidden=\\"true\\"
          class=\\"ecl-link__icon ecl-icon ecl-icon--xl ecl-social-media-follow__icon\\"
        >
          <use xlink:href=\\"example#facebook\\" /></svg
        ><svg
          focusable=\\"false\\"
          aria-hidden=\\"true\\"
          class=\\"ecl-link__icon ecl-icon ecl-icon--xl ecl-social-media-follow__icon-hover\\"
        >
          <use xlink:href=\\"example#facebook_hover\\" /></svg
        ><span class=\\"ecl-link__label\\">Facebook</span></a
      >
    </li>
    <li class=\\"ecl-social-media-follow__item\\">
      <a
        href=\\"/example\\"
        class=\\"ecl-social-media-follow__link ecl-link ecl-link--standalone ecl-link--icon ecl-link--icon-before\\"
        ><svg
          focusable=\\"false\\"
          aria-hidden=\\"true\\"
          class=\\"ecl-link__icon ecl-icon ecl-icon--xl ecl-social-media-follow__icon\\"
        >
          <use xlink:href=\\"example#gplus\\" /></svg
        ><svg
          focusable=\\"false\\"
          aria-hidden=\\"true\\"
          class=\\"ecl-link__icon ecl-icon ecl-icon--xl ecl-social-media-follow__icon-hover\\"
        >
          <use xlink:href=\\"example#gplus_hover\\" /></svg
        ><span class=\\"ecl-link__label\\">Google+</span></a
      >
    </li>
    <li class=\\"ecl-social-media-follow__item\\">
      <a
        href=\\"/example\\"
        class=\\"ecl-social-media-follow__link ecl-link ecl-link--standalone ecl-link--icon ecl-link--icon-before\\"
        ><svg
          focusable=\\"false\\"
          aria-hidden=\\"true\\"
          class=\\"ecl-link__icon ecl-icon ecl-icon--xl ecl-social-media-follow__icon\\"
        >
          <use xlink:href=\\"example#linkedin\\" /></svg
        ><svg
          focusable=\\"false\\"
          aria-hidden=\\"true\\"
          class=\\"ecl-link__icon ecl-icon ecl-icon--xl ecl-social-media-follow__icon-hover\\"
        >
          <use xlink:href=\\"example#linkedin_hover\\" /></svg
        ><span class=\\"ecl-link__label\\">Linkedin</span></a
      >
    </li>
    <li class=\\"ecl-social-media-follow__item\\">
      <a
        href=\\"/example\\"
        class=\\"ecl-social-media-follow__link ecl-link ecl-link--standalone ecl-link--icon ecl-link--icon-before\\"
        ><span class=\\"ecl-link__label\\">Other social networks</span></a
      >
    </li>
  </ul>
</div>
"
`;
